--- a/HelloWorldJSApp/package.json
+++ b/HelloWorldJSApp/package.json
@@ -9,16 +9,20 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "2.2.0",
     "@react-navigation/bottom-tabs": "^7.4.9",
     "@react-navigation/elements": "^2.6.5",
     "@react-navigation/material-top-tabs": "^7.3.8",
     "@react-navigation/native": "^7.1.18",
     "expo": "~54.0.13",
     "expo-status-bar": "~3.0.8",
+    "jwt-decode": "^4.0.0",
     "react": "19.1.0",
     "react-native": "0.81.4",
+    "react-native-collapsible-tab-view": "^8.0.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
+    "react-native-svg": "15.12.1",
     "react-native-tab-view": "^4.1.3"
   },
   "private": true
