--- a/HelloWorldJSApp/backend/package.json
+++ b/HelloWorldJSApp/backend/package.json
@@ -9,13 +9,16 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
+    "@react-native-async-storage/async-storage": "2.2.0",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "http-status": "^2.1.0",
     "jsonwebtoken": "^9.0.2",
+    "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7"
-  }
+  },
+  "description": ""
 }
