--- a/HelloWorldJSApp/backend/package.json
+++ b/HelloWorldJSApp/backend/package.json
@@ -17,6 +17,7 @@
     "express": "^5.1.0",
     "http-status": "^2.1.0",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^2.0.2",
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7"
   },
