--- a/HelloWorldJSApp/package.json
+++ b/HelloWorldJSApp/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "2.2.0",
+    "@react-native-picker/picker": "2.11.1",
     "@react-navigation/bottom-tabs": "^7.4.9",
     "@react-navigation/elements": "^2.6.5",
     "@react-navigation/material-top-tabs": "^7.3.8",
     "@react-navigation/native": "^7.1.18",
     "expo": "~54.0.13",
+    "expo-image-picker": "~17.0.8",
     "expo-status-bar": "~3.0.8",
     "jwt-decode": "^4.0.0",
     "react": "19.1.0",
