--- a/HelloWorldJSApp/package.json
+++ b/HelloWorldJSApp/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/elements": "^2.6.5",
     "@react-navigation/material-top-tabs": "^7.3.8",
     "@react-navigation/native": "^7.1.18",
+    "@react-navigation/stack": "^7.6.11",
     "expo": "~54.0.13",
     "expo-image-picker": "~17.0.8",
     "expo-status-bar": "~3.0.8",
