--- a/HelloWorldJSApp/package.json
+++ b/HelloWorldJSApp/package.json
@@ -23,10 +23,12 @@
     "react": "19.1.0",
     "react-native": "0.81.4",
     "react-native-collapsible-tab-view": "^8.0.1",
+    "react-native-paper": "^5.14.5",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-svg": "15.12.1",
-    "react-native-tab-view": "^4.1.3"
+    "react-native-tab-view": "^4.1.3",
+    "react-native-toast-message": "^2.3.3"
   },
   "private": true
 }
