--- a/HelloWorldJSApp/package.json
+++ b/HelloWorldJSApp/package.json
@@ -16,17 +16,19 @@
     "@react-navigation/material-top-tabs": "^7.3.8",
     "@react-navigation/native": "^7.1.18",
     "@react-navigation/stack": "^7.6.11",
+    "dayjs": "^1.11.19",
     "expo": "~54.0.13",
     "expo-image-picker": "~17.0.8",
     "expo-status-bar": "~3.0.8",
     "jwt-decode": "^4.0.0",
     "react": "19.1.0",
     "react-native": "0.81.4",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-collapsible-tab-view": "^8.0.1",
     "react-native-paper": "^5.14.5",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
-    "react-native-svg": "15.12.1",
+    "react-native-svg": "^15.12.1",
     "react-native-tab-view": "^4.1.3",
     "react-native-toast-message": "^2.3.3"
   },
