--- a/HelloWorldJSApp/package.json
+++ b/HelloWorldJSApp/package.json
@@ -18,8 +18,10 @@
     "@react-navigation/stack": "^7.6.11",
     "dayjs": "^1.11.19",
     "expo": "~54.0.13",
+    "expo-av": "^16.0.8",
     "expo-image-picker": "~17.0.8",
     "expo-status-bar": "~3.0.8",
+    "expo-video": "^3.0.15",
     "jwt-decode": "^4.0.0",
     "react": "19.1.0",
     "react-native": "0.81.4",
