feat : add event and get events

--- a/HelloWorldJSApp/package.json
+++ b/HelloWorldJSApp/package.json
@@ -19,12 +19,15 @@
     "dayjs": "^1.11.19",
     "expo": "~54.0.13",
     "expo-av": "^16.0.8",
+    "expo-file-system": "^19.0.21",
     "expo-image-picker": "~17.0.8",
     "expo-status-bar": "~3.0.8",
     "expo-video": "^3.0.15",
     "jwt-decode": "^4.0.0",
     "react": "19.1.0",
     "react-native": "0.81.4",
+    "react-native-calendar": "^0.13.1",
+    "react-native-calendars": "^1.1313.0",
     "react-native-chart-kit": "^6.12.0",
     "react-native-collapsible-tab-view": "^8.0.1",
     "react-native-paper": "^5.14.5",
