--- a/HelloWorldJSApp/package.json
+++ b/HelloWorldJSApp/package.json
@@ -16,9 +16,11 @@
     "@react-navigation/material-top-tabs": "^7.3.8",
     "@react-navigation/native": "^7.1.18",
     "@react-navigation/stack": "^7.6.11",
+    "babel-plugin-inline-dotenv": "^1.7.0",
     "dayjs": "^1.11.19",
     "expo": "~54.0.13",
     "expo-av": "^16.0.8",
+    "expo-constants": "~18.0.13",
     "expo-file-system": "^19.0.21",
     "expo-image-picker": "~17.0.8",
     "expo-status-bar": "~3.0.8",
